# cyber-defence-agent

./: .gitignore  CMakeLists.txt  LLM_BACKEND_README.md  README.md  TODO.txt  logo_specification.md  update_config.txt
content/: blog_post.md  linkedin_post.md  twitter_posts.md
docs/: api.md  architecture.md  developer-guide.md  index.md  troubleshooting.md  user-guide.md
include/: CDA.h
installers/: INSTALL.md  control_center_install.sh  install.sh  llm_backend_install.sh
src/agent/: Agent.cpp  Detector.cpp  Monitor.cpp  PacketInspector.cpp  PacketInspector.h  UpdateManager.cpp  UpdateManager.h  main.cpp
src/backend/: llm_backend.py
src/control_center/: control_server.py
tests/: CMakeLists.txt  integration_test.cpp  test_agent.cpp  test_detector.cpp  test_llm_backend.py  test_packet_inspector.cpp  test_update_manager.cpp
